# edim-dde-ai-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
AI/src/agents/: __init__.py  cluster_config_agent.py  registry.py
AI/src/chains/: __init__.py  cost_optimization_chain.py  explanation_chain.py  pattern_analysis_chain.py
AI/tests/: __init__.py  test_cluster_config_agent.py  test_cluster_config_agent_local.py  test_rag_integration.py
API/: __init__.py
API/src/: deps.py  main.py
API/tests/: test_agents_endpoint.py  test_guardrails.py  test_health_endpoint.py  test_recommendations.py
DE/: __init__.py
DE/src/: __init__.py
DE/tests/: __init__.py  test_databricks_collector.py  test_local_data_collector.py
UI/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
UI/src/: index.html  styles.css
data/: sample.csv  sample_job_metrics.csv
docs/: BACKLOG.md
scripts/: init-db.sql  migrate-db.py
shared/abstractions/: __init__.py  protocols.py
shared/config/: __init__.py  azure_config.py  settings.py
shared/database/: __init__.py  connection.py  models.py
shared/factories/: __init__.py  data_collector_factory.py
shared/guardrails/: __init__.py  exceptions.py  input_guardrails.py  output_guardrails.py
shared/models/: __init__.py  job_cluster_metrics.py  recommendations.py
shared/services/: __init__.py  cost_logging_service.py  observability_service.py
shared/utils/: logging.py
(+52 files in other folders)
